--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "autoprefixer": "10.4.16",
+    "axios": "^1.5.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "micro": "^10.0.1",
     "mongoose": "^7.5.2",
     "next": "13.5.2",
+    "next-auth": "^4.23.1",
+    "next-reveal": "^1.0.6",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stripe": "^13.7.0",
     "styled-components": "^6.0.8",
     "tailwindcss": "3.3.3"
   }
