--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "lodash": "^4.17.21",
     "micro": "^10.0.1",
     "mongoose": "^7.5.2",
     "next": "13.5.2",
@@ -26,6 +27,8 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-flying-item": "^1.1.2",
+    "react-spinners": "^0.13.8",
     "stripe": "^13.7.0",
     "styled-components": "^6.0.8",
     "tailwindcss": "3.3.3"
